--- a/axis-extension.qmd
+++ b/axis-extension.qmd
@@ -24,6 +24,7 @@ library(emmeans)
 library(broom.mixed)
 library(effectsize)
 library(papaja)
+library(patchwork)
 ```
 
 ```{r}
@@ -114,6 +115,10 @@ anon_file %>%
     inner_join(demographics, by = "participant") %>%
     inner_join(durations, by = "participant") %>%
     mutate(total_duration = total_duration / 60) %>%
+    mutate(across(matches(c("cond", "axis")), 
+                  ~ case_match(.x,
+                               "full" ~ "extend",
+                               "trunc" ~ "default"))) %>%
     mutate(across(matches(c("axis", "denominator", "cond")), as_factor)) %>%
     mutate(across(c("participant", "item_no"), as.character)) %>%
     assign(paste0("e", .y),
@@ -302,8 +307,8 @@ e1 %>%
   geom_jitter(width = 0,
               height = 0.2,
               alpha = 0.1) +
-  scale_y_discrete(breaks = c("full", "trunc"),
-                   labels = c("Extended", "Truncated")) + 
+  scale_y_discrete(breaks = c("extend", "default"),
+                   labels = c("Extended", "Default")) + 
   labs(title = 'Experiment 1',
       y = NULL,
        x = NULL) + 
@@ -341,9 +346,9 @@ e1_mag_cmpr <- lmer(comparison(e1_mag, fixed = NULL),
 anova_results(e1_mag_cmpr, e1_mag)
 ```
 
-There was a significant effect of axis upper bound: $\chi^2$(`r in_paren(e1_mag_cmpr.Df)`) = `r printnum(e1_mag_cmpr.Chi)`, p `r printp(e1_mag_cmpr.p, add_equals = TRUE)`, partial $\eta^2$ = `r printnum(e1_mag.eta.cond)`. Participants awarded higher ratings to charts with truncated axes, compared to charts with extended axes.
+There was a significant effect of axis upper bound: $\chi^2$(`r in_paren(e1_mag_cmpr.Df)`) = `r printnum(e1_mag_cmpr.Chi)`, p `r printp(e1_mag_cmpr.p, add_equals = TRUE)`, partial $\eta^2$ = `r printnum(e1_mag.eta.cond)`. Participants awarded higher ratings to charts with default axes, compared to charts with extended axes.
 
-### Magnitude Ratings and Literacy
+### Magnitude Ratings and Data Visualisation Literacy
 
 ```{r}
 #| label: e1-lit
@@ -380,8 +385,8 @@ e2 %>%
   geom_jitter(width = 0,
               height = 0.2,
               alpha = 0.1) +
-  scale_y_discrete(limits = c("full", "trunc"),
-                   labels = c("Extended", "Truncated")) + 
+  scale_y_discrete(limits = c("extend", "default"),
+                   labels = c("Extended", "Default")) + 
   labs(title = 'Experiment 2',
       y = NULL,
        x = NULL) + 
@@ -452,8 +457,8 @@ There was also a significant interaction between axis upper bound and denominato
 emmip(e2_mag@model, denominator ~ axis, CIs = T) +
   scale_color_discrete(limits = c('abs', 'pres'), 
                    labels = c('Absent from text', 'Present in text')) +
-  scale_x_discrete(limits = c('full', 'trunc'), 
-                       labels = c('Extended', 'Truncated')) +
+  scale_x_discrete(limits = c('extend', 'default'), 
+                       labels = c('Extended', 'Default')) +
   scale_y_continuous(limits = c(1,2), 
                      breaks = c(1,2), 
                      minor_breaks = seq(1,2,0.2),
@@ -469,9 +474,29 @@ emmip(e2_mag@model, denominator ~ axis, CIs = T) +
 
 @fig-e2-mag-int shows the interaction.
 
-Pairwise comparisons reveal that charts with extended and truncated axes were rated differently when the denominator was present, replicating the effect from E1 (z = `r printnum(e2_mag_emm.pres.z.ratio)`, p `r printp(e2_mag_emm.pres.p.value, add_equals = TRUE)`), and also when the denominator was absent (z = `r printnum(e2_mag_emm.abs.z.ratio)`, `r printp(e2_mag_emm.abs.p.value)`). Therefore, the interaction indicates that the degree of difference in magnitude ratings was affected by whether the denominator was present or absent.
+Pairwise comparisons reveal that charts with extended and default axes were rated differently when the denominator was present, replicating the effect from E1 (z = `r printnum(e2_mag_emm.pres.z.ratio)`, p `r printp(e2_mag_emm.pres.p.value, add_equals = TRUE)`), and also when the denominator was absent (z = `r printnum(e2_mag_emm.abs.z.ratio)`, `r printp(e2_mag_emm.abs.p.value)`). Therefore, the interaction indicates that the degree of difference in magnitude ratings was affected by whether the denominator was present or absent.
 
 This model employed by-participant and by-item random effects. For each participant, there were random intercepts, plus random slopes for axis upper bounds and denominator presence. For each item, there were random intercepts, plus random slopes for denominator presence.
+
+### Magnitude Ratings and Data Visualisation Literacy
+
+```{r}
+#| label: e2-lit
+#| eval: !expr params$eval_models
+#| cache: !expr params$eval_models
+
+e2_mag_l <- lmer(add.terms(formula(e2_mag),
+"literacy"),
+              data = e2)
+```
+
+```{r}
+#| label: e2-mag-l-anova
+
+anova_results(e2_mag_l, e2_mag)
+```
+
+Including data visualisation literacy as an additional fixed effect did not improve the explanation of variance in magnitude ratings: $\chi^2$(`r in_paren(e2_mag_l.Df)`) = `r printnum(e2_mag_l.Chi)`, p `r printp(e2_mag_l.p, add_equals = TRUE)`. This indicates that data visualisation literacy cannot explain
 
 ### Confidence Ratings
 
@@ -488,8 +513,8 @@ e2 %>%
   geom_jitter(width = 0,
               height = 0.2,
               alpha = 0.1) +
-  scale_y_discrete(breaks = c("full", "trunc"),
-                   labels = c("Extended", "Truncated")) + 
+  scale_y_discrete(breaks = c("extend", "default"),
+                   labels = c("Extended", "Default")) + 
   labs(title = 'Experiment 2',
       y = NULL,
        x = NULL) + 
@@ -557,8 +582,8 @@ get_contrasts(e2_con_emm, condition = "denominator")
 emmip(e2_con@model, denominator ~ axis, CIs = T) +
   scale_color_discrete(limits = c('abs', 'pres'), 
                    labels = c('Absent from text', 'Present in text')) +
-  scale_x_discrete(limits = c('full', 'trunc'), 
-                       labels = c('Extended', 'Truncated')) +
+  scale_x_discrete(limits = c('extend', 'default'), 
+                       labels = c('Extended', 'Default')) +
   scale_y_continuous(limits = c(1,2), 
                      breaks = c(1,2), 
                      minor_breaks = seq(1,2,0.2),
@@ -569,10 +594,31 @@ emmip(e2_con@model, denominator ~ axis, CIs = T) +
        color = "Denominator in Text",
        title = "Experiment 2 - Confidence Ratings",
        subtitle =  "Estimated Marginal Means") + 
-  theme_minimal(base_size = 14)
+  theme_minimal(base_size = 14) +
+  theme(legend.position="bottom")
 ```
 
 @fig-e2-con-int shows the interaction.
+
+### Confidence Ratings and Data Visualisation Literacy
+
+```{r}
+#| label: e2-con-lit
+#| eval: !expr params$eval_models
+#| cache: !expr params$eval_models
+
+e2_con_l <- lmer(add.terms(formula(e2_con),
+"literacy"),
+              data = e2)
+```
+
+```{r}
+#| label: e2-con-l-anova
+
+anova_results(e2_con_l, e2_con)
+```
+
+Including data visualisation literacy as an additional fixed effect resulted in a worse model fit, and the model without this term was significantly better than the model containing this term: $\chi^2$(`r in_paren(e2_con_l.Df)`) = `r printnum(e2_con_l.Chi)`, p `r printp(e2_con_l.p, add_equals = TRUE)`. This indicates that data visualisation literacy does not sufficiently contribute to the explanation of variance in confidence ratings. 
 
 ```{r}
 knitr::knit_exit()
@@ -581,7 +627,7 @@ knitr::knit_exit()
 # Magnitude Ratings and Data Visualisation Literacy
 
 ```{r}
-#| label: e2-lit
+#| label: e2-li-t
 #| eval: !expr params$eval_models
 #| cache: !expr params$eval_models
 
@@ -594,7 +640,7 @@ e2_con_l <- lmer(add.terms(formula(e2_con),
 ```
 
 ```{r}
-#| label: e2-lit-results
+#| label: e2-lit-result-s
 
 summary_extract(e2_mag_l, "axis1:denominator1")
 summary_extract(e2_con_l, "denominator1:axis1")
