--- a/axis-extension.qmd
+++ b/axis-extension.qmd
@@ -288,37 +288,9 @@ e1_mag <- buildmer(slider.response ~ cond +
 
 ```{r}
 summary_extract(e1_mag)
-
-# NumDF  DenDF F.value p Eta2_partial
-
 ```
 
-`r printnum(e1_mag_cond_F.value)`
-
-```{r}
-#| label: e2-mag
-#| eval: !expr params$eval_models
-#| cache: !expr params$eval_models
-
-e2_mag <- buildmer(mag_slider.response ~ axis*denominator +
-                     (1 + axis*denominator | participant) + 
-                     (1 + axis*denominator | item_no),
-                   data = e2)
-```
-
-```{r}
-summary_extract(e2_mag)
-
-# e2_mag_denominator_
-```
-
-`r printnum(e2_mag_axis_F.value)`
-
-```{r}
-knitr::knit_exit()
-```
-
-There was a significant effect of axis upper bound: $\chi^2$(`r in_paren(e1_mag_cmpr.Df)`) = `r printnum(e1_mag_cmpr.Chi)`, p `r printp(e1_mag_cmpr.p, add_equals = TRUE)`, partial $\eta^2$ = `r printnum(e1_mag.eta.cond)`. Participants awarded higher ratings to charts with default axes, compared to charts with extended axes.
+There was a significant effect of axis upper bound: F(`r printnum(e1_mag_cond_NumDF)`, `r printnum(e1_mag_cond_DenDF)`) = `r printnum(e1_mag_cond_F.value)`, p `r printp(e1_mag_cond_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e1_mag_cond_Eta2_partial)`. Participants awarded higher ratings to charts with default axes, compared to charts with extended axes.
 
 ### Magnitude Ratings and Data Visualisation Literacy
 
@@ -332,7 +304,7 @@ e1_mag_l <- lmer(add.terms(formula(e1_mag),
               data = e1)
 ```
 
-Including data visualisation literacy as an additional fixed effect did not improve the explanation of variance in magnitude ratings: $\chi^2$(`r in_paren(e1_mag_l.Df)`) = `r printnum(e1_mag_l.Chi)`, p `r printp(e1_mag_l.p, add_equals = TRUE)`. This indicates that data visualisation literacy cannot explain
+Including data visualisation literacy as an additional fixed effect ...
 
 ## Experiment 2 - Analysis
 
@@ -367,6 +339,27 @@ e2 %>%
 @fig-e2-mag shows the raw data.
 
 ```{r}
+#| label: e2-mag
+#| eval: !expr params$eval_models
+#| cache: !expr params$eval_models
+
+e2_mag <- buildmer(mag_slider.response ~ axis*denominator +
+                     (1 + axis*denominator | participant) + 
+                     (1 + axis*denominator | item_no),
+                   data = e2)
+```
+
+```{r}
+summary_extract(e2_mag)
+```
+
+There was a significant effect of axis upper bound: F(`r printnum(e2_mag_axis_NumDF)`, `r printnum(e2_mag_axis_DenDF)`) = `r printnum(e2_mag_axis_F.value)`, p `r printp(e2_mag_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_Eta2_partial)`.
+
+There was a significant effect of denominator presence: F(`r printnum(e2_mag_denominator_NumDF)`, `r printnum(e2_mag_denominator_DenDF)`) = `r printnum(e2_mag_denominator_F.value)`, p `r printp(e2_mag_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_denominator_Eta2_partial)`.
+
+There was a significant effect of denominator presence: F(`r printnum(e2_mag_axis_denominator_NumDF)`, `r printnum(e2_mag_axis_denominator_DenDF)`) = `r printnum(e2_mag_axis_denominator_F.value)`, p `r printp(e2_mag_axis_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_denominator_Eta2_partial)`.
+
+```{r}
 #| label: e2-mag-contrasts
 
 e2_mag_emm <- emmeans(e2_mag@model, pairwise ~ axis * denominator, adjust = 'sidak') 
@@ -377,12 +370,11 @@ get_contrasts(e2_mag_emm, condition = "denominator")
 # _SE
 # _p.value
 # _estimate
-# _df
 ```
 
-For magnitude ratings, likelihood ratio tests revealed main effects for both axis upper bound ($\chi^2$(`r in_paren(e2_mag_test_axis.Df)`) = `r printnum(e2_mag_test_axis.Chi)`, p `r printp(e2_mag_test_axis.p, add_equals = TRUE)`, partial $\eta^2$ = `r printnum(e2_mag.eta.axis)`) and denominator presence ($\chi^2$(`r in_paren(e2_mag_test_denom.Df)`) = `r printnum(e2_mag_test_denom.Chi)`, p `r printp(e2_mag_test_denom.p, add_equals = TRUE)`, partial $\eta^2$ = `r printnum(e2_mag.eta.denominator)`).
+Pairwise comparisons reveal that charts with extended and default axes were rated differently when the denominator was present, replicating the effect from E1 (z = `r printnum(e2_mag_emm_pres_z.ratio)`, p `r printp(e2_mag_emm_pres_p.value, add_equals = TRUE)`), and also when the denominator was absent (z = `r printnum(e2_mag_emm_abs_z.ratio)`, p `r printp(e2_mag_emm_abs_p.value)`). Therefore, the interaction indicates that the degree of difference in magnitude ratings was affected by whether the denominator was present or absent.
 
-There was also a significant interaction between axis upper bound and denominator information: $\chi^2$(`r in_paren(e2_mag_test_int.Df)`) = `r printnum(e2_mag_test_int.Chi)`, p `r printp(e2_mag_test_int.p, add_equals = TRUE)`, partial $\eta^2$ = `r printnum(e2_mag.eta.axis_denominator)`.
+This model employed by-participant and by-item random effects. For each participant, there were random intercepts, plus random slopes for axis upper bounds and denominator presence. For each item, there were random intercepts, plus random slopes for denominator presence.
 
 ```{r}
 #| label: fig-e2-mag-int
@@ -409,10 +401,6 @@ emmip(e2_mag@model, denominator ~ axis, CIs = T) +
 
 @fig-e2-mag-int shows the interaction.
 
-Pairwise comparisons reveal that charts with extended and default axes were rated differently when the denominator was present, replicating the effect from E1 (z = `r printnum(e2_mag_emm.pres.z.ratio)`, p `r printp(e2_mag_emm.pres.p.value, add_equals = TRUE)`), and also when the denominator was absent (z = `r printnum(e2_mag_emm.abs.z.ratio)`, `r printp(e2_mag_emm.abs.p.value)`). Therefore, the interaction indicates that the degree of difference in magnitude ratings was affected by whether the denominator was present or absent.
-
-This model employed by-participant and by-item random effects. For each participant, there were random intercepts, plus random slopes for axis upper bounds and denominator presence. For each item, there were random intercepts, plus random slopes for denominator presence.
-
 ### Magnitude Ratings and Data Visualisation Literacy
 
 ```{r}
@@ -423,6 +411,10 @@ This model employed by-participant and by-item random effects. For each particip
 e2_mag_l <- lmer(add.terms(formula(e2_mag),
 "literacy"),
               data = e2)
+```
+
+```{r}
+knitr::knit_exit()
 ```
 
 Including data visualisation literacy as an additional fixed effect did not improve the explanation of variance in magnitude ratings: $\chi^2$(`r in_paren(e2_mag_l.Df)`) = `r printnum(e2_mag_l.Chi)`, p `r printp(e2_mag_l.p, add_equals = TRUE)`. This indicates that data visualisation literacy cannot explain
