--- a/axis-extension.qmd
+++ b/axis-extension.qmd
@@ -25,6 +25,7 @@ library(broom.mixed)
 library(effectsize)
 library(papaja)
 library(patchwork)
+library(insight)
 ```
 
 ```{r}
@@ -253,24 +254,33 @@ print_es <- function(x) {ifelse(x<.001, "< 0.001", paste("=", printnum(x)))}
 
 ## Experiment 1 - Analysis
 
-```{r}
-#| label: fig-e1-mag
-#| include: true
+### Magnitude Ratings
 
-e1 %>%
+```{r}
+
+
+p_data <- e1 %>%
   ggplot(aes(x = slider.response, y = cond)) +
   geom_jitter(width = 0,
               height = 0.2,
               alpha = 0.1) +
   scale_y_discrete(breaks = c("extend", "default"),
                    labels = c("Extended", "Default")) + 
-  labs(title = 'Experiment 1',
+  labs(#title = 'Experiment 1',
       y = NULL,
        x = NULL) + 
   scale_x_continuous(labels = c('Very low\nmagnitude', 'Very high\nmagnitude'),
     breaks = c(1,2),
     minor_breaks = c()) + 
-  theme_minimal()
+  theme_minimal(base_size = 16)
+
+p_label <- ggplot(tibble()) + geom_point(aes(x = 1, y = 1.5), alpha = 0.2, size = 2) + xlim(1, 2) + ylim(1, 2) + coord_fixed(ratio=0.1) + annotate("text", label = " = one rating", x = 1.2, y = 1.5) + theme_void()
+```
+
+```{r}
+#| label: fig-e1-mag
+#| include: true
+p_label / p_data
 ```
 
 @fig-e1-mag shows the raw data.
@@ -290,7 +300,14 @@ e1_mag <- buildmer(slider.response ~ cond +
 summary_extract(e1_mag)
 ```
 
-There was a significant effect of axis upper bound: F(`r printnum(e1_mag_cond_NumDF)`, `r printnum(e1_mag_cond_DenDF)`) = `r printnum(e1_mag_cond_F.value)`, p `r printp(e1_mag_cond_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e1_mag_cond_Eta2_partial)`. Participants awarded higher ratings to charts with default axes, compared to charts with extended axes.
+Participants awarded higher ratings to charts with default axes, compared to charts with extended axes: F(`r printnum(e1_mag_cond_NumDF)`, `r printnum(e1_mag_cond_DenDF)`) = `r printnum(e1_mag_cond_F.value)`, p `r printp(e1_mag_cond_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e1_mag_cond_Eta2_partial)`.
+
+```{r}
+#| include: true
+random_str(e1_mag)
+```
+
+This model employed random...
 
 ### Magnitude Ratings and Data Visualisation Literacy
 
@@ -304,7 +321,11 @@ e1_mag_l <- lmer(add.terms(formula(e1_mag),
               data = e1)
 ```
 
-Including data visualisation literacy as an additional fixed effect ...
+```{r}
+summary_extract(e1_mag_l)
+```
+
+Accounting for differences in data visualisation literacy did not change the significant effect of axis upper bound F(`r printnum(e1_mag_l_cond_NumDF)`, `r printnum(e1_mag_l_cond_DenDF)`) = `r printnum(e1_mag_l_cond_F.value)`, p `r printp(e1_mag_l_cond_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e1_mag_l_cond_Eta2_partial)`.
 
 ## Experiment 2 - Analysis
 
@@ -332,8 +353,7 @@ e2 %>%
     breaks = c(1,2),
     minor_breaks = c()) + 
   facet_wrap(vars(denominator), ncol = 1, labeller = labeller(denominator = denom_labs)) +
-  theme_minimal()
-  
+  theme_minimal(base_size = 16)
 ```
 
 @fig-e2-mag shows the raw data.
@@ -353,11 +373,9 @@ e2_mag <- buildmer(mag_slider.response ~ axis*denominator +
 summary_extract(e2_mag)
 ```
 
-There was a significant effect of axis upper bound: F(`r printnum(e2_mag_axis_NumDF)`, `r printnum(e2_mag_axis_DenDF)`) = `r printnum(e2_mag_axis_F.value)`, p `r printp(e2_mag_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_Eta2_partial)`.
+Charts with default axes elicited higher ratings than chart with extended axes (F(`r printnum(e2_mag_axis_NumDF)`, `r printnum(e2_mag_axis_DenDF)`) = `r printnum(e2_mag_axis_F.value)`, p `r printp(e2_mag_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_Eta2_partial)`) and charts not accompanied by a denominator in text elicited higher ratings than those accompanied by a denominator (F(`r printnum(e2_mag_denominator_NumDF)`, `r printnum(e2_mag_denominator_DenDF)`) = `r printnum(e2_mag_denominator_F.value)`, p `r printp(e2_mag_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_denominator_Eta2_partial)`).
 
-There was a significant effect of denominator presence: F(`r printnum(e2_mag_denominator_NumDF)`, `r printnum(e2_mag_denominator_DenDF)`) = `r printnum(e2_mag_denominator_F.value)`, p `r printp(e2_mag_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_denominator_Eta2_partial)`.
-
-There was a significant effect of denominator presence: F(`r printnum(e2_mag_axis_denominator_NumDF)`, `r printnum(e2_mag_axis_denominator_DenDF)`) = `r printnum(e2_mag_axis_denominator_F.value)`, p `r printp(e2_mag_axis_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_denominator_Eta2_partial)`.
+Crucially, there was also a significant interaction between axis upper bound and denominator presence: F(`r printnum(e2_mag_axis_denominator_NumDF)`, `r printnum(e2_mag_axis_denominator_DenDF)`) = `r printnum(e2_mag_axis_denominator_F.value)`, p `r printp(e2_mag_axis_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_denominator_Eta2_partial)`.
 
 ```{r}
 #| label: e2-mag-contrasts
@@ -365,11 +383,6 @@ There was a significant effect of denominator presence: F(`r printnum(e2_mag_axi
 e2_mag_emm <- emmeans(e2_mag@model, pairwise ~ axis * denominator, adjust = 'sidak') 
   
 get_contrasts(e2_mag_emm, condition = "denominator")
-
-# e2_mag_emm_abs_z.ratio
-# _SE
-# _p.value
-# _estimate
 ```
 
 Pairwise comparisons reveal that charts with extended and default axes were rated differently when the denominator was present, replicating the effect from E1 (z = `r printnum(e2_mag_emm_pres_z.ratio)`, p `r printp(e2_mag_emm_pres_p.value, add_equals = TRUE)`), and also when the denominator was absent (z = `r printnum(e2_mag_emm_abs_z.ratio)`, p `r printp(e2_mag_emm_abs_p.value)`). Therefore, the interaction indicates that the degree of difference in magnitude ratings was affected by whether the denominator was present or absent.
@@ -381,9 +394,15 @@ This model employed by-participant and by-item random effects. For each particip
 #| include: true
 #| message: false
 
-emmip(e2_mag@model, denominator ~ axis, CIs = T) +
-  scale_color_discrete(limits = c('abs', 'pres'), 
-                   labels = c('Absent from text', 'Present in text')) +
+my_palette <- unname(palette.colors(palette = "Okabe-Ito")[2:3])
+
+emmip(e2_mag@model, denominator ~ axis, CIs = T, 
+      dotarg = list(shape = "circle", size = 2), 
+      linearg = list(linetype = "solid", lwd = 1.5),
+      CIarg = list(lwd = 3, alpha = 0.5)) +
+  scale_color_manual(limits = c('abs', 'pres'), 
+                   labels = c('Absent from text', 'Present in text'),
+                   values = my_palette) +
   scale_x_discrete(limits = c('extend', 'default'), 
                        labels = c('Extended', 'Default')) +
   scale_y_continuous(limits = c(1,2), 
@@ -396,7 +415,7 @@ emmip(e2_mag@model, denominator ~ axis, CIs = T) +
        color = "Denominator in Text",
        title = "Experiment 2 - Magnitude Ratings",
        subtitle =  "Estimated Marginal Means") + 
-  theme_minimal(base_size = 14)
+  theme_minimal(base_size = 16)
 ```
 
 @fig-e2-mag-int shows the interaction.
@@ -412,12 +431,6 @@ e2_mag_l <- lmer(add.terms(formula(e2_mag),
 "literacy"),
               data = e2)
 ```
-
-```{r}
-knitr::knit_exit()
-```
-
-Including data visualisation literacy as an additional fixed effect did not improve the explanation of variance in magnitude ratings: $\chi^2$(`r in_paren(e2_mag_l.Df)`) = `r printnum(e2_mag_l.Chi)`, p `r printp(e2_mag_l.p, add_equals = TRUE)`. This indicates that data visualisation literacy cannot explain
 
 ### Confidence Ratings
 
@@ -443,8 +456,7 @@ e2 %>%
     breaks = c(1,2),
     minor_breaks = c()) + 
   facet_wrap(vars(denominator), ncol = 1, labeller = labeller(denominator = denom_labs)) +
-  theme_minimal()
-  
+  theme_minimal(base_size = 16)  
 ```
 
 @fig-e2-con shows the raw data.
@@ -467,12 +479,6 @@ e2_con_summ <- anova(e2_con) %>% as_tibble(rownames = "FixEf", .name_repair = ma
   rename("Pr" = "Pr..F.")
 ```
 
-There was a significant interaction between axis upper bound and denominator information: $\chi^2$(`r in_paren(e2_con_cmpr.Df)`) = `r printnum(e2_con_cmpr.Chi)`, p `r printp(e2_con_cmpr.p, add_equals = TRUE)`, partial $\eta^2$ = `r printnum(e2_con.eta.denominator_axis)`.
-
-There was a significant difference at different levels of axis: F = `r printnum(e2_con_summ %>% filter(FixEf == 'axis') %>% pull(F.value))`, p `r printp(e2_con_summ %>% filter(FixEf == 'axis') %>% pull(Pr), add_equals = T)`.
-
-and at different levels of denominator: `r printnum(e2_con_summ %>% filter(FixEf == 'denominator') %>% pull(F.value))`, p `r printp(e2_con_summ %>% filter(FixEf == 'denominator') %>% pull(Pr), add_equals = T)`.
-
 {{< include test1.md >}}
 
 ```{r}
@@ -487,24 +493,32 @@ get_contrasts(e2_con_emm, condition = "denominator")
 #| label: fig-e2-con-int
 #| include: true
 #| message: false
+#| fig-cap: with 95% confidence intervals
 
-emmip(e2_con@model, denominator ~ axis, CIs = T) +
-  scale_color_discrete(limits = c('abs', 'pres'), 
-                   labels = c('Absent from text', 'Present in text')) +
+my_palette <- unname(palette.colors(palette = "Okabe-Ito")[2:3])
+
+emmip(e2_con@model, denominator ~ axis, 
+      CIs = T, 
+      dotarg = list(shape = "circle", size = 2), 
+      linearg = list(linetype = "solid", lwd = 1.5),
+      CIarg = list(lwd = 3, alpha = 0.5)) +
+  scale_color_manual(limits = c('abs', 'pres'), 
+                   labels = c('Absent from text', 'Present in text'),
+                   values = my_palette,
+                   guide = guide_legend(reverse=T)) +
   scale_x_discrete(limits = c('extend', 'default'), 
                        labels = c('Extended', 'Default')) +
   scale_y_continuous(limits = c(1,2), 
                      breaks = c(1,2), 
                      minor_breaks = seq(1,2,0.2),
-                     labels = c('Very low\nmagnitude', 
-                                'Very high\nmagnitude')) + 
+                     labels = c('Not very\nconfident', 
+                                'Very\nconfident')) + 
   labs(x = "Axis Upper Bound",
        y = "Magnitude Rating",
        color = "Denominator in Text",
        title = "Experiment 2 - Confidence Ratings",
        subtitle =  "Estimated Marginal Means") + 
-  theme_minimal(base_size = 14) +
-  theme(legend.position="bottom")
+  theme_minimal(base_size = 16)
 ```
 
 @fig-e2-con-int shows the interaction.
@@ -519,32 +533,4 @@ emmip(e2_con@model, denominator ~ axis, CIs = T) +
 e2_con_l <- lmer(add.terms(formula(e2_con),
 "literacy"),
               data = e2)
-```
-
-Including data visualisation literacy as an additional fixed effect resulted in a worse model fit, and the model without this term was significantly better than the model containing this term: $\chi^2$(`r in_paren(e2_con_l.Df)`) = `r printnum(e2_con_l.Chi)`, p `r printp(e2_con_l.p, add_equals = TRUE)`. This indicates that data visualisation literacy does not sufficiently contribute to the explanation of variance in confidence ratings.
-
-```{r}
-knitr::knit_exit()
-```
-
-# Magnitude Ratings and Data Visualisation Literacy
-
-```{r}
-#| label: e2-li-t
-#| eval: !expr params$eval_models
-#| cache: !expr params$eval_models
-
-e2_mag_l <- lmer(add.terms(formula(e2_mag),
-"literacy"),
-              data = e2)
-e2_con_l <- lmer(add.terms(formula(e2_con),
-"literacy"),
-              data = e2)
-```
-
-```{r}
-#| label: e2-lit-result-s
-
-summary_extract(e2_mag_l, "axis1:denominator1")
-summary_extract(e2_con_l, "denominator1:axis1")
 ```
