--- a/axis-extension.qmd
+++ b/axis-extension.qmd
@@ -257,8 +257,6 @@ print_es <- function(x) {ifelse(x<.001, "< 0.001", paste("=", printnum(x)))}
 ### Magnitude Ratings
 
 ```{r}
-
-
 p_data <- e1 %>%
   ggplot(aes(x = slider.response, y = cond)) +
   geom_jitter(width = 0,
@@ -305,11 +303,11 @@ summary_extract(e1_mag)
 Participants awarded higher ratings to charts with default axes, compared to charts with extended axes: F(`r printnum(e1_mag_cond_NumDF)`, `r printnum(e1_mag_cond_DenDF)`) = `r printnum(e1_mag_cond_F.value)`, p `r printp(e1_mag_cond_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e1_mag_cond_Eta2_partial)`.
 
 ```{r}
-#| include: true
+#| include: false
 random_str(e1_mag)
 ```
 
-This model employed random...
+This model employed a maximal random effects structure, capturing the baseline responses (intercepts) and differences between the two axis settings (slopes) separately for each individual participant and each individual item.
 
 ### Magnitude Ratings and Data Visualisation Literacy
 
@@ -389,7 +387,14 @@ get_contrasts(e2_mag_emm, condition = "denominator")
 
 Pairwise comparisons reveal that charts with extended and default axes were rated differently when the denominator was present, replicating the effect from E1 (z = `r printnum(e2_mag_emm_pres_z.ratio)`, p `r printp(e2_mag_emm_pres_p.value, add_equals = TRUE)`), and also when the denominator was absent (z = `r printnum(e2_mag_emm_abs_z.ratio)`, p `r printp(e2_mag_emm_abs_p.value)`). Therefore, the interaction indicates that the degree of difference in magnitude ratings was affected by whether the denominator was present or absent.
 
-This model employed by-participant and by-item random effects. For each participant, there were random intercepts, plus random slopes for axis upper bounds and denominator presence. For each item, there were random intercepts, plus random slopes for denominator presence.
+The presence of a denominator decreased magnitude ratings for default charts, as expected: F... However, it also decreased magnitude ratings for extended charts: .
+
+```{r}
+#| include: false
+random_str(e2_mag)
+```
+
+This model employed by-participant and by-item random effects. For each participant, there were random intercepts, plus random slopes for axis settings and denominator presence. For each item, there were random intercepts, plus random slopes for denominator presence.
 
 ```{r}
 #| label: fig-e2-mag-int
